# GameOfLife

./: CMakeLists.txt  README.md  desktop.ini  improperCord.txt  test.txt  testfile.txt  testwrite.txt
experiment/: main.cpp
include/: Cell.h  GameState.h  View.h
report/: report.tex
src/: GameState.cpp  View.cpp
test/: testGameState.cpp  testView.cpp
